--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  background: #eee;
   width: 200px;
   height: 400px;
 }
@@ -18,6 +19,12 @@
 .grid .cell {
   height: 20px;
   width: 20px;
+}
+
+.grid .taken {
+  background: red;
+  width: 20px;
+  height: 20px;
 }
 
 .tetromino {
