--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,7 @@
 .grid {
     display: flex;
     flex-wrap: wrap;
+    background: #eee;
 
     // TODO: DINAMICALLY ASSIGN SIZE TO GAME BOARDS AND CELLS
     width: 200px;
@@ -15,6 +16,12 @@
     .cell {
         height: 20px;
         width: 20px;
+    }
+
+    .taken {
+        background: red;
+        width: 20px;
+        height: 20px;
     }
 }
 
