--- a/styles/main.css
+++ b/styles/main.css
@@ -30,4 +30,27 @@
 .tetromino {
   background: #333;
 }
+
+.mini-grid {
+  width: 80px;
+  height: 80px;
+  margin-left: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background-color: #eee;
+}
+
+.mini-grid .mini-cell {
+  height: 20px;
+  width: 20px;
+}
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 /*# sourceMappingURL=main.css.map */
