--- a/styles/main.scss
+++ b/styles/main.scss
@@ -28,3 +28,22 @@
 .tetromino {
     background: #333;
 }
+
+.mini-grid {
+    width: 80px;
+    height: 80px;
+
+    margin-left: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #eee;
+
+    .mini-cell {
+        height: 20px;
+        width: 20px;
+    }
+}
+
+.container {
+    display: flex;
+}
